force-app/main/default/objects/Lease_Agreement__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>Signed_By_Tenant__c = true &amp;&amp; Signed_By_Property_Owner__c = true  &amp;&amp; Start_Date__c  &lt; TODAY() &amp;&amp; End_Date__c &gt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>