force-app/main/default/objects/Lease_Agreement__c/fields/Monthly_Rent_Due__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rent_Due__c</fullName>
    <label>Monthly Rent Due</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>