force-app/main/default/objects/Lease_Agreement__c/fields/Signed_By_Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Property_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the lease agreement been read and signed by the property owner?</description>
    <label>Signed By Property Owner</label>
    <type>Checkbox</type>
</CustomField>