force-app/main/default/objects/Lease_Agreement__c/fields/Signed_By_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Tenant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the lease agreement been read and signed by the prospective tenant?</description>
    <label>Signed By Tenant</label>
    <type>Checkbox</type>
</CustomField>