force-app/main/default/objects/Lease_Agreement__c/validationRules/End_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ADDMONTHS(Start_Date__c ,6) &gt; End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Lease end date must be at least 6 months later than start date</errorMessage>
</ValidationRule>