force-app/main/default/objects/Lease_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Monthly_Rent_Due__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Signed_By_Property_Owner__c</columns>
    <columns>Signed_By_Tenant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>